@@ -1,3 +1,8 @@
+2009-06-24  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Small fixes to compound alert and event
+	  generation.
+
 2009-06-15  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/SNMPServer.pm: Fixed the call to snmp_trap2agent (was
